RESOLVED FIXED117138
background-color is not preserved when inserting a new paragraph
https://bugs.webkit.org/show_bug.cgi?id=117138
Summary background-color is not preserved when inserting a new paragraph
Lukasz Gajowy
Reported 2013-06-03 04:15:44 PDT
Created attachment 203572 [details] Test case showing the bug. Steps to reproduce (on the test page included): 1. Place the caret after "Text1". 2. Press enter. 3. Write anything. The text you write should have red background and green color.
Attachments
Test case showing the bug. (372 bytes, text/html)
2013-06-03 04:15 PDT, Lukasz Gajowy
no flags
Proposed fix. (4.28 KB, patch)
2013-06-04 01:12 PDT, Lukasz Gajowy
no flags
Grzegorz Czajkowski
Comment 1 2013-06-03 04:24:23 PDT
Similar problem with merging paragraph bug 116215
Lukasz Gajowy
Comment 2 2013-06-04 01:12:22 PDT
Created attachment 203662 [details] Proposed fix.
WebKit Commit Bot
Comment 3 2013-06-14 21:42:39 PDT
Comment on attachment 203662 [details] Proposed fix. Clearing flags on attachment: 203662 Committed r151612: <http://trac.webkit.org/changeset/151612>
WebKit Commit Bot
Comment 4 2013-06-14 21:42:41 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.