background-color is not preserved when inserting a new paragraph https://bugs.webkit.org/show_bug.cgi?id=117138

Patch by Lukasz Gajowy <l.gajowy@samsung.com> on 2013-06-14
Reviewed by Ryosuke Niwa.

Source/WebCore:

The style isn't copied because background-color isn't defined as inheritable property.

Test: editing/inserting/insert-paragraph-not-preserving-background-color.html

* editing/InsertParagraphSeparatorCommand.cpp:
(WebCore::InsertParagraphSeparatorCommand::calculateStyleBeforeInsertion):
Passing EditingPropertiesInEffect instead of implicit parameter OnlyEditingInheritableProperties.

LayoutTests:

Adding layout test and expected result to reproduce the issue.

* editing/inserting/insert-paragraph-with-font-and-background-color-expected.txt: Added.
* editing/inserting/insert-paragraph-with-font-and-background-color.html: Added.

Canonical link: https://commits.webkit.org/135815@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151612 268f45cc-cd09-0410-ab3c-d52691b4dbfc